更新application上传附件的大小参数，改为MB，Mb会报错！ springboot版本升到2.1.3.RELEASE！ banner.txt简单化！

--- a/converter-flv/src/main/resources/application.properties
+++ b/converter-flv/src/main/resources/application.properties
@@ -23,5 +23,5 @@ logging.config=classpath:log4j2-${spring.profiles.active}.json
 server.tomcat.uri-encoding=UTF-8
 
 #\u6587\u4ef6\u4e0a\u4f20\u5927\u5c0f\u9650\u5236
-spring.servlet.multipart.maxFileSize=50Mb
-spring.servlet.multipart.maxRequestSize=50Mb
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
