--- a/converter-flv/src/main/resources/application.properties
+++ b/converter-flv/src/main/resources/application.properties
@@ -25,3 +25,5 @@ server.tomcat.uri-encoding=UTF-8
 #\u6587\u4ef6\u4e0a\u4f20\u5927\u5c0f\u9650\u5236
 spring.servlet.multipart.maxFileSize=50Mb
 spring.servlet.multipart.maxRequestSize=50Mb
+
+flvserver.desKey=W1ses0ft
