--- a/converter-flv/pom.xml
+++ b/converter-flv/pom.xml
@@ -39,6 +39,7 @@
 		<spring-boot-admin.version>2.1.1</spring-boot-admin.version>
 		<hibernate.version>5.3.7.Final</hibernate.version>
 		<dropwizard-metrics.version>3.2.6</dropwizard-metrics.version>
+	        <log4j2.version>2.17.0</log4j2.version>
 	</properties>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
